--- a/services.html
+++ b/services.html
@@ -152,7 +152,7 @@
               </li>
               <li class="nav-item mt-2">
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
-                  <h4>Unde praesentium sed</h4>
+                  <h4>Undo praesentium sed</h4>
                   <p>Voluptas vel esse repudiandae quo excepturi.</p>
                 </a>
               </li>
