--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -52,7 +52,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
+          <li><a class="active" href="services.html">LoanMe</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a class="active" href="portfolio.html">Portfolio</a></li>
           <li><a href="blog.html">Blog</a></li>
