--- a/pricing.html
+++ b/pricing.html
@@ -55,7 +55,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a class="active" href="services.html">LoanMe</a></li>
+          <li><a href="services.html">LoanMe</a></li>
           <li><a class="active" href="pricing.html">Portfolio
 
           </a></li>
