loans page update

--- a/services.html
+++ b/services.html
@@ -90,13 +90,15 @@
               <div class="icon"><i class="bi bi-bank"></i></div>
               <h4 class="title"><a href="finloans.html">Financial Loans</a></h4>
               <p class="description">Get your Education, Wedding, Pregnancy, Travel, Housing Loans at the tip of your fingers</p>
+              <a href="finloans.html">Click here to apply</a>
             </div>
           </div>
           <div class="col-lg-6 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-cash"></i></div>
-              <h4 class="title"><a href="">Quick Cash</a></h4>
+              <h4 class="title"><a href="cashloans.html">Quick Cash</a></h4>
               <p class="description">Apply for quick and instant CASH here!</p>
+              <a href="cashloans.html">Click here to apply</a>
             </div>
           </div>
           <!-- <div class="col-lg-4 col-md-6">
