--- a/cashloans.html
+++ b/cashloans.html
@@ -71,7 +71,7 @@
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">LoanMe</a></li>
-            <li>Financial Loans</li>
+            <li>Cash Loans</li>
           </ol>
         </div>
 
