--- a/finloans.html
+++ b/finloans.html
@@ -82,34 +82,18 @@
       <div class ="row"> 
         <div class="col-lg-3 p-0"> 
           <h4 class="m-0">Loan Purpose</h4>
-        </div>
-
-        <div class ="col-lg-9 p-0">  
-            <div clsas="dropdown"> 
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Loan Purpose
-              </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item">Education</a>
-                <a class="dropdown-item">Wedding</a>
-                <a class="dropdown-item">Housing</a>
-                <a class="dropdown-item">Pregnancy</a>
-                <a class="dropdown-item">Travel</a>
-              </div> 
+        </div
+        <div class ="col-sm-5">  
+              <select name="finloan" id="finloan">
+                <option value="Edu">Education </option>
+                <option value="Wed">Wedding</option>
+                <option value="House" selected>Housing</option>
+                <option value="Preg">Pregnancy</option>
+                <option value="Tra">Travel</option>
+              </select>
             </div> 
         </div> 
         </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
   </main><!-- End #main -->
 
 
