--- a/cashloans.html
+++ b/cashloans.html
@@ -101,7 +101,21 @@
                 <br>
                 <br>
                 <label>Need it instantly?</label>
+                <select class="form-select text-secondary col-lg-5" aria-label="Default select example">
+                    <option value="Edu" selected>Yes</option>
+                    <option value="Wed">No</option>
+                    <br>
+                </select>
+                
                 </form>
+                <div class="container">
+                    <div>
+                      <div>
+                        <br>
+                        <button type="button" class="btn btn-primary">Submit</button>
+                      </div>
+                    </div>
+                  </div>
             </div>
         </div>
         </div>
