--- a/cashloans.html
+++ b/cashloans.html
@@ -111,9 +111,11 @@
 
                     <div class="col-lg-8"> 
 
-                    <input class="form-control" oninput="rangeInput.value=amount.value" id="box1" type="text" value="1000" name="amount" for="rangeInput" onkeyup="updateTextInput(this.value);" oninput="amount.value=rangeInput.value"/>
+                    <input class="form-control" oninput="rangeInput.value=amount.value" id="box1" type="text" 
+                    value="10" name="amount" for="rangeInput" onkeyup="updateTextInput(this.value);" oninput="amount.value=rangeInput.value"/>
 
-                    <input id="range1" type="range" name="rangeInput" min="1000" step="100" max="10000" value="1000" class="white" onchange="updateTextInput(this.value);" oninput="amount.value=rangeInput.value">
+                    <input id="range1" type="range" name="rangeInput" min="1000" step="100" max="10000" value="1000" class="white" 
+                    onchange="updateTextInput(this.value);" oninput="amount.value=rangeInput.value" onchange="myfunc()">
                     </form>
                     </div>
                 </div>
@@ -126,16 +128,18 @@
 
                     <div class="col-lg-8"> 
 
-                    <input class="form-control" oninput="rangeInput.value=amount.value" id="box2" type="text" value="1" name="amount" for="rangeInput" onkeyup="updateTextInput(this.value);" oninput="amount.value=rangeInput.value"/>
+                    <input class="form-control" oninput="rangeInput.value=amount.value" id="box2" type="text" value="1" name="amount" 
+                    for="rangeInput" onkeyup="updateTextInput(this.value);" oninput="amount.value=rangeInput.value"/>
 
-                    <input id="range2" type="range" name="rangeInput" min="1" step="1" max="12" value="1" class="white" onchange="updateTextInput(this.value);" oninput="amount.value=rangeInput.value">
+                    <input id="range2" type="range" name="rangeInput" min="1" step="1" max="12" value="1" 
+                    class="white" onchange="updateTextInput(this.value);" oninput="amount.value=rangeInput.value">
                     </form>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-4 p-0">  
-                    <label>Need It Instantly?</label>
+                    <label>Need It Instantly? ($10)</label>
                     </div>
                     
                     <div class="col-lg-8">
@@ -156,14 +160,18 @@
                 </div>
 
                 </br> 
-
-                Loan Value: <p type="text" id="LoanVal" onkeyup="insertValue()">
-               
-                Loan Term
-                Loan Interest 
-
-                Monthly Amount Payable
-                Loan Payable Date
+                <div>
+                  <p>Loan Value: <a id="LoanVal"></a></p>
+                  <p>Loan Term:</p>
+                  <p>Loan Interest:</p>
+                  <p>Monthly Payable Amount:</p>
+                  <p>Loan Payable Date:</p>
+                </div>
+                <script>
+                  var newval = document.getElementById("box1").value;
+                  var loanholder = document.getElementById("LoanVal");
+                  loanholder.innerHTML=`$`+newval;
+                </script>
             </div>
         </div>
     </div>
