--- a/cashloans.html
+++ b/cashloans.html
@@ -112,10 +112,10 @@
                     <div class="col-lg-8"> 
 
                     <input class="form-control" oninput="rangeInput.value=amount.value" id="box1" type="text" 
-                    value="10" name="amount" for="rangeInput" onkeyup="updateTextInput(this.value);" oninput="amount.value=rangeInput.value"/>
+                    value="10" name="amount" for="rangeInput" onkeyup="updateTextInput(this.value);" oninput="amount.value=rangeInput.value" onchange="insertValue(this.value)"/>
 
-                    <input id="range1" type="range" name="rangeInput" min="1000" step="100" max="10000" value="1000" class="white" 
-                    onchange="updateTextInput(this.value);" oninput="amount.value=rangeInput.value" onchange="myfunc()">
+                    <input id="range1" type="range" name="rangeInput" min="10" step="5" max="500" value="10" class="white" 
+                    onchange="updateTextInput(this.value);"  oninput="amount.value=rangeInput.value" onchange="myfunc()">
                     </form>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                     <div class="col-lg-8"> 
 
                     <input class="form-control" oninput="rangeInput.value=amount.value" id="box2" type="text" value="1" name="amount" 
-                    for="rangeInput" onkeyup="updateTextInput(this.value);" oninput="amount.value=rangeInput.value"/>
+                    for="rangeInput" onkeyup="updateTextInput(this.value);" oninput="amount.value=rangeInput.value" onchange="insertMonth(this.value)" />
 
                     <input id="range2" type="range" name="rangeInput" min="1" step="1" max="12" value="1" 
                     class="white" onchange="updateTextInput(this.value);" oninput="amount.value=rangeInput.value">
@@ -162,16 +162,12 @@
                 </br> 
                 <div>
                   <p>Loan Value: <a id="LoanVal"></a></p>
-                  <p>Loan Term:</p>
+                  <p>Loan Term: <a id="LoanMo"></a></p>
                   <p>Loan Interest:</p>
                   <p>Monthly Payable Amount:</p>
                   <p>Loan Payable Date:</p>
                 </div>
-                <script>
-                  var newval = document.getElementById("box1").value;
-                  var loanholder = document.getElementById("LoanVal");
-                  loanholder.innerHTML=`$`+newval;
-                </script>
+            
             </div>
         </div>
     </div>
@@ -209,9 +205,16 @@
           }
 
         function insertValue(){ 
-            var ValueNum = document.getElementById("Box").value; 
-            document.getElementById("box1").innerHTML = x} 
+            var newval = document.getElementById("box1").value;
+            var loanholder = document.getElementById("LoanVal");
+            loanholder.innerHTML=`$ `+newval;
+        } 
 
+        function insertMonth(){ 
+            var newval2 = document.getElementById("box2").value;
+            var loanmonth = document.getElementById("LoanMo");
+            loanmonth.innerHTML= newval2+' months';
+        } 
 
 
     </script>
