loan change for homepage

--- a/index.html
+++ b/index.html
@@ -134,7 +134,26 @@
         </div>
 
       </div>
+
+      <br>
+
+     
     </section><!-- End Cta Section -->
+    <section id="cta" class="cta">
+    <div class="container" >
+
+      <div class="row">
+        <div class="col-lg-9 text-center text-lg-left">
+          <h3>Loan with <span style="color:blue">Max Up</span> today</h3>
+          <p> Never worry about your investment capital anymore, loan with us now!</p>
+        </div>
+        <div class="col-lg-3 cta-btn-container text-center">
+          <a class="cta-btn align-middle" href="cashloans.html">Loan Now</a>
+        </div>
+      </div>
+
+    </div>
+  </section><!-- End Cta Section -->
 
     <!-- ======= Services Section ======= -->
     <!-- <section id="services" class="services">
