--- a/services.html
+++ b/services.html
@@ -51,10 +51,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <!-- <li><a href="about.html">About</a></li> -->
           <li><a class="active" href="services.html">LoanMe</a></li>
           <li><a href="pricing.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -82,25 +82,25 @@
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
-      <div class="container">
+      <!-- <div class="container"> -->
 
-        <div class="row">
-          <div class="col-lg-6 col-md-6">
+        <div>
+          <div>
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-bank"></i></div>
-              <h4 class="title"><a href="finloans.html">Financial Loans</a></h4>
-              <p class="description">Get your Education, Wedding, Pregnancy, Travel, Housing Loans at the tip of your fingers</p>
-              <a href="finloans.html">Click here to apply</a>
+              <h4 class="title"><a href="cashloans.html">Investment Loan</a></h4>
+              <p class="description">Never worry about your investment capital anymore, loan with us now!</p>
+              <a href="cashloans.html">Click here to apply</a>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6">
+          <!-- <div class="col-lg-6 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-cash"></i></div>
               <h4 class="title"><a href="cashloans.html">Quick Cash</a></h4>
               <p class="description">Apply for quick and instant CASH here!</p>
               <a href="cashloans.html">Click here to apply</a>
             </div>
-          </div>
+          </div> -->
           <!-- <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-bar-chart"></i></div>
@@ -131,7 +131,7 @@
           </div> -->
         </div>
 
-      </div>
+      <!-- </div> -->
     </section><!-- End Services Section -->
 
     <!-- ======= Features Section ======= -->
