--- a/finloans.html
+++ b/finloans.html
@@ -48,10 +48,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <!-- <li><a href="about.html">About</a></li> -->
           <li><a href="services.html">LoanMe</a></li>
           <li><a href="pricing.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
