--- a/pricing.html
+++ b/pricing.html
@@ -47,7 +47,7 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">MAXUP</a></h1>
+        <h1 class="text-light"><a href="index.html">MaxUp</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -55,10 +55,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <!-- <li><a href="about.html">About</a></li> -->
           <li><a href="services.html">LoanMe</a></li>
           <li><a class="active" href="pricing.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
