--- a/cashloans.html
+++ b/cashloans.html
@@ -70,7 +70,7 @@
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">LoanMe</a></li>
-            <li>Cash Loans</li>
+            <li>Apply</li>
           </ol>
         </div>
 
