--- a/cashloans.html
+++ b/cashloans.html
@@ -97,7 +97,7 @@
                     <div class="col-lg-8"> 
 
                     <input class="form-control" oninput="rangeInput.value=amount.value" id="box1" type="text" 
-                    value="1000" name="amount" onkeyup="updateTextInput(this.value);" oninput="amount.value=rangeInput.value" onchange="insertValue(this.value)"/>
+                    value="1000" name="amount" onkeyup="insertValue(this.value)"/>
                     </form>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                   <p>Loan Value: <a id="LoanVal">$ 1000</a></p>
                   
                   <p>Loan Term: <a id="LoanYr">1 Year</a></p>
-                  <p>Interest Rate: </p>
+                  <p>Interest Rate: <a id="intRate"></a></p>
                   <p>One time Processing Fee (0.1%): </p>
                   <p>Monthly Repayment: </p>
                     <script>
@@ -192,6 +192,11 @@
             // console.log(valyr, textyr)
             document.getElementById("LoanYr").innerHTML=valyr + " Year(s)";
         } 
+
+        function intRate(){
+          var loan = document.getElementById("box1").value;
+          document.getElementById("intRate").innerHTML="absc";
+        }
 
 
     </script>
