--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
-      <!-- <div class="container"> -->
+      <div class="container">
 
         <div>
           <div>
@@ -90,7 +90,7 @@
               <div class="icon"><i class="bi bi-bank"></i></div>
               <h4 class="title"><a href="cashloans.html">Investment Loan</a></h4>
               <p class="description">Never worry about your investment capital anymore, loan with us now!</p>
-              <a href="cashloans.html">Click here to apply</a>
+              <a href="cashloans.html">Click here to Apply</a>
             </div>
           </div>
           <!-- <div class="col-lg-6 col-md-6">
@@ -131,8 +131,9 @@
           </div> -->
         </div>
 
-      <!-- </div> -->
+      </div>
     </section><!-- End Services Section -->
+
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
