--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
   ======================================================== -->
 </head>
 
-<body>
+<body onload = "check()">
 
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">MaxUp</a></h1>
+        <h1 class="text-light"><a href="index.html">MaxUp</a> <span id = "welcomemsg" style = "color:black; font-size: 15px;">Welcome back Glendys!</span></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -51,11 +51,13 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
-          <!-- <li><a href="about.html">About</a></li> -->
+          <li id = "navbar_signin"><a href="signin.html">Sign Up/Login</a></li>
+          <li id = "navbar_profile"><a href="profile.html">My Profile</a></li> 
           <li><a href="services.html">LoanMe</a></li>
           <li><a href="pricing.html">Portfolio</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
+          <li id = "logout"><a onclick = "logout()">Logout </a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -405,4 +407,34 @@
 
 </body>
 
+<script>
+   function check(){
+        if(sessionStorage.getItem("username") != null){
+            document.getElementById("navbar_signin").style.display = "none";
+            document.getElementById("navbar_profile").style.display = "block";
+            document.getElementById("logout").style.display = "block";
+        }
+
+        else{
+          document.getElementById("navbar_signin").style.display = "block";
+          document.getElementById("navbar_profile").style.display = "none";
+          document.getElementById("logout").style.display = "none";
+        }
+    }
+
+  window.sessionStorage
+
+  if(sessionStorage.getItem("username") != null){
+    document.getElementById("welcomemsg").style.display = "block";
+  }
+  else{
+    document.getElementById("welcomemsg").style.display = "none";
+  }
+
+  function logout(){
+        sessionStorage.clear();
+        window.location.href = "index.html";
+    }
+
+</script>
 </html>
