--- a/setupprofile.html
+++ b/setupprofile.html
@@ -36,7 +36,7 @@
   ======================================================== -->
 </head>
 
-<body>
+<body onload  = "check()">
 
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
@@ -50,12 +50,14 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <!-- <li><a href="about.html">About</a></li> -->
+          <li><a  href="index.html">Home</a></li>
+          <li id = "navbar_signin"><a href="signin.html">Sign Up/Login</a></li>
+          <li id = "navbar_profile"><a class="active" href="profile.html">My Profile</a></li> 
           <li><a href="services.html">LoanMe</a></li>
           <li><a href="pricing.html">Portfolio</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
+          <li id = "logout"><a onclick = "logout()">Logout </a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -169,7 +171,8 @@
           </span>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" id = "tryagain">Try again</button>
+            <button type="button" class="btn btn-secondary" onclick = "window.location.href = 'profile.html'" id = "continue">Continue</button>
           </div>
         </div>
       </div>
@@ -241,12 +244,16 @@
                           console.log("hi")
                           document.getElementById("successsetup").style.display = "none";
                             document.getElementById("errorsetup").style.display = "block";
+                            document.getElementById("continue").style.display = "none";
+                            document.getElementById("tryagain").style.display = "block";
                             return;
                         }
                         else if (globalErrorID !== "010000"){
                             console.log(serviceRespHeader.ErrorDetails);
                             document.getElementById("successsetup").style.display = "none";
                             document.getElementById("errorsetup").style.display = "block";
+                            document.getElementById("continue").style.display = "none";
+                            document.getElementById("tryagain").style.display = "block";
                             return;
                         }
                         
@@ -256,6 +263,8 @@
                     else{
                       document.getElementById("successsetup").style.display = "block";
                       document.getElementById("errorsetup").style.display = "none";
+                      document.getElementById("continue").style.display = "block";
+                      document.getElementById("tryagain").style.display = "none";
                       sessionStorage.setItem("userID", userID)
                       sessionStorage.setItem("pin", pin)
                       sessionStorage.setItem("profilesetup", true)
@@ -269,6 +278,26 @@
                 xmlHttp.send();
 
   }
+
+  function logout(){
+        sessionStorage.clear();
+        window.location.href = "index.html";
+    }
+
+
+    function check(){
+        if(sessionStorage.getItem("username") != null){
+            document.getElementById("navbar_signin").style.display = "none";
+            document.getElementById("navbar_profile").style.display = "block";
+            document.getElementById("logout").style.display = "block";
+        }
+
+        else{
+          document.getElementById("navbar_signin").style.display = "block";
+          document.getElementById("navbar_profile").style.display = "none";
+          document.getElementById("logout").style.display = "none";
+        }
+    }
 </script>
 
 </html>
