--- a/signin.html
+++ b/signin.html
@@ -51,7 +51,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li id = "navbar_signin"><a href="signin.html">Sign In</a></li> 
+          <li id = "navbar_signin"><a a class ="active" href="signin.html">Sign Up/Login</a></li> 
           <li id = "navbar_profile"><a href="profile.html">My Profile</a></li> 
           <li><a href="services.html">LoanMe</a></li>
           <li><a href="pricing.html">Portfolio</a></li>
