--- a/signup.html
+++ b/signup.html
@@ -51,7 +51,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li id = "navbar_signin"><a href="signin.html">Sign In/Login</a></li> 
+          <li id = "navbar_signin"><a class ="active" href="signin.html">Sign In/Login</a></li> 
           <li id = "navbar_profile"><a href="profile.html">My Profile</a></li> 
           <li><a href="services.html">LoanMe</a></li>
           <li><a href="pricing.html">Portfolio</a></li>
@@ -86,7 +86,6 @@
       <div class="container">
 
         <div class="row no-gutters">
-          <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start" data-aos="fade-right"></div>
           <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
               <h3 data-aos="fade-up">Sign Up with Maxup</h3>
