create captcha page

--- a/services.html
+++ b/services.html
@@ -88,7 +88,7 @@
               <div class="icon"><i class="bi bi-bank"></i></div>
               <h4 class="title"><a href="cashloans.html">Investment Loan</a></h4>
               <p class="description">Never worry about your investment capital anymore, loan with us now!</p>
-              <a href="cashloans.html">Click here to Apply</a>
+              <!-- <a href="cashloans.html">Click here to Apply</a> -->
             </div>
          
           <!-- <div class="col-lg-6 col-md-6">
@@ -133,7 +133,7 @@
 
     <!-- Testing Loan Section -->
 
-    <section id="services" class="services p-0">
+    <section id="services" class="services p-0 mb-3">
       <div class="container">
 
         <div class="icon-box m-0" data-aos="fade-right">
@@ -150,7 +150,7 @@
             
             <div class ="row"> 
                 <div class="col-lg-5 p-0"> 
-                <form>
+                <form id="formTest">
                 <label class="p-2">Loan Value (SGD $)</label>
                 </div> 
 
@@ -210,87 +210,13 @@
 
           <div class="container d-grid gap-2 d-md-flex mt-2 ms-6 ps-4 justify-content-md-end">
             <button class="btn btn-outline-danger me-md-2" type="button">Cancel</button>
-            <button class="btn btn-outline-success" type="button">Apply</button>
+            <button class="btn btn-outline-success" type="button"><a href="captcha.html" class="text-success"> Apply</a></button>
           </div>
 
         </div>
 
       </div>
     </section>
-
-
-
-
-
-
-
-    <!-- ======= Features Section ======= -->
-    <!-- <section id="features" class="features">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2>Some <strong>Features</strong> we do provide</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 mb-5 mb-lg-0" data-aos="fade-right">
-            <ul class="nav nav-tabs flex-column">
-              <li class="nav-item">
-                <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
-                  <h4>Modi sit est</h4>
-                  <p>Quis excepturi porro totam sint earum quo nulla perspiciatis eius.</p>
-                </a>
-              </li>
-              <li class="nav-item mt-2">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
-                  <h4>Unde praesentium sed</h4>
-                  <p>Voluptas vel esse repudiandae quo excepturi.</p>
-                </a>
-              </li>
-              <li class="nav-item mt-2">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
-                  <h4>Pariatur explicabo vel</h4>
-                  <p>Velit veniam ipsa sit nihil blanditiis mollitia natus.</p>
-                </a>
-              </li>
-              <li class="nav-item mt-2">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-4">
-                  <h4>Nostrum qui quasi</h4>
-                  <p>Ratione hic sapiente nostrum doloremque illum nulla praesentium id</p>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-7 ml-auto" data-aos="fade-left" data-aos-delay="100">
-            <div class="tab-content">
-              <div class="tab-pane active show" id="tab-1">
-                <figure>
-                  <img src="assets/img/features-1.png" alt="" class="img-fluid">
-                </figure>
-              </div>
-              <div class="tab-pane" id="tab-2">
-                <figure>
-                  <img src="assets/img/features-2.png" alt="" class="img-fluid">
-                </figure>
-              </div>
-              <div class="tab-pane" id="tab-3">
-                <figure>
-                  <img src="assets/img/features-3.png" alt="" class="img-fluid">
-                </figure>
-              </div>
-              <div class="tab-pane" id="tab-4">
-                <figure>
-                  <img src="assets/img/features-4.png" alt="" class="img-fluid">
-                </figure>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section> -->
-    <!-- End Features Section -->
 
   </main><!-- End #main -->
 
@@ -356,6 +282,24 @@
           document.getElementById("TotRep").innerHTML="$ " + calculate.toFixed(2);
           document.getElementById("MonRep").innerHTML="$ " + calculate2.toFixed(2); 
         }
+
+    //passing value input to captcha.html
+  var form = document.getElementById("formTest");
+  form.addEventListener("button", function(){ 
+    var inputTest = document.getElementById('box1').value; 
+    localStorage.setItem('valueToPass', inputTest); 
+
+    window.location="captcha.html"; 
+  })
+
+// // Now, set up a submit event handler for the form
+// form.addEventListener("submit", function(){
+
+//   // Only when the form has been submitted do you want the textbox value
+//   var inputTest = document.getElementById('userInput').value;
+//   localStorage.setItem( 'objectToPass', inputTest );
+
+//   window.location = "NEW URL";
 
     </script>
 
